Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/platform/PreviewAPIsWithRelease.out
PreviewAPIsWithRelease.java:12:11: compiler.err.is.preview: stripIndent()
PreviewAPIsWithRelease.java:13:22: compiler.warn.is.preview.reflective: RECORD
1 error
1 warning
